--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -716,8 +716,8 @@
                                 <h4 class="c_head">Ranking List</h4>
 
                                 <ul class="list-unstyled ticket_categories">
-                                    <li><img src="../static/img/home_support/cmm5.png" alt="category"><a href="#">Docs WordPress
-                                            Theme</a> <span class="count">10</span></li>
+                                    <li><img src="../static/img/home_support/cmm5.png" alt="category"><a href="/forum-single1">Are there any scandal-free sanitary pad brands left?
+                                    </a> <span class="count">10</span></li>
                                     <li><img src="../static/img/home_support/cmm4.png" alt="category"><a href="#">Product Landing
                                             Page</a><span class="count count-fill">13</span><span
                                             class="count">54</span></li>
